# ITBA_QUACS

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
bagfiles/: 2014-07-15-15-14-51_navdata.csv  2014-07-15-15-16-49_imu.csv  2014-07-15-15-16-49_navdata.csv  2014-07-15-15-20-39_imu.csv  2014-07-15-15-20-39_navdata.csv  2014-07-18-10-13-34_imu.csv  2014-07-18-10-13-34_navdata.csv  2014-07-18-10-14-28_navdata.csv  2014-07-18-10-14-29_cmd_vel.csv  2014-07-23-10-53-59_cmd_vel.csv
cfg/: Controller.cfg  InitialConditions.cfg  Test.cfg
launch/: ardrone_gui.launch  arduino.launch  gps_test.launch  gui.launch  open_loop.launch  plot.launch  record.launch  simulator.launch  test.launch
msg/: ControllerState.msg  QuadrotorPose.msg
parameters/: Filter_Parameters.yaml  PID_Parameters.yaml  ardrone1_bottom.yaml  ardrone1_front.yaml  ardrone2_bottom.yaml  ardrone2_front.yaml
scripts/: load_camera_parameters  record_cmd_vel  record_gps  record_image  record_imu  record_mag  record_navdata  record_sensor_fusion_pose  record_sensor_fusion_quaternion  record_sensor_fusion_velocity  record_sonar  record_trajectory_pose  record_trajectory_velocity
src/: ardrone_commander.py  ardrone_simulator.py  arduino_translator.py  controller.py  gps_reciever.py  gui.py  state_estimation.py  trajectory.py  way_points.txt
src/lib/: Controllers.py  Filter.py  FilterHelpers.py  Joysticks.py  Quadrotor.py  QuadrotorCommands.py  Quaternion.py  Sensors.py  Signals.py  __init__.py
srv/: OpenLoopCommand.srv
test/: filter_tests.py  quadrotor_test.py  quaternion_test.py  run_tests.test  sensors_test.py  test_filters.py  test_quadrotor.py  test_quaternion.py  test_sensors.py
test/FilterTestData/: Accelerometer.txt  Gyroscope.txt  Magnetometer.txt  Time.txt  (+6 more)
