<?xml version="1.0"?>
<package>
  <name>ardrone_control</name>
  <version>0.0.0</version>
  <description>This package provides trajectory control, state estimation and sensor fusion of the AR.Drone 
     It works with AR.Drone 1.0 experimentally</description>

  <maintainer email="sebascuri@gmail.com">Sebastian Curi</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ardrone_control</url>

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>unittest</test_depend> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>rostest</build_depend>
  
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <!--export-->
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  <!--/export-->
</package>